--- a/pv_medicare_apiposting.html
+++ b/pv_medicare_apiposting.html
@@ -222,7 +222,23 @@
             <option value="divorced">Divorced</option>
           </select>
         </div>
-        
+        <div class="col-md-6">
+          <label class="form-label">Coverage Type</label>
+          <select class="form-select" id="requested_coverage_types" required>
+            <option value="IndividualFamily">IndividualFamily</option>
+            <option value="Medicare">Medicare</option>
+            <option value="MedicareSupplement">MedicareSupplement</option>
+            <option value="MedicareAdvantage">MedicareAdvantage</option>
+            <option value="Medicaid">Medicaid</option>
+            <option value="Vision">Vision</option>
+            <option value="Dental">Dental</option>
+            <option value="Prescription">Prescription</option>
+            <option value="ShortTerm">ShortTerm</option>
+            <option value="COBRA">COBRA</option>
+            <option value="DiscountPlan">DiscountPlan</option>
+            <option value="Maternity">Maternity</option>          
+          </select>
+        </div>
         <div class="col-md-6">
           <label class="form-label">Currently Employed</label>
           <select class="form-select" id="currently_employed" required>
@@ -331,7 +347,7 @@
   </form>
 </div>
 
-<script src="https://js.formifyweb.com/pv_medicare_apiposting.js?ver=3"></script>
+<script src="https://js.formifyweb.com/pv_medicare_apiposting.js?ver=4"></script>
   <script>
         document.addEventListener("contextmenu", function (e) {
             e.preventDefault(); // Prevent the context menu from appearing
@@ -340,6 +356,7 @@
 </body>
 
 </html>
+
 
 
 
