--- a/jk&co_rtb_15oct.html
+++ b/jk&co_rtb_15oct.html
@@ -50,15 +50,7 @@
       </div>
     </div>
 </div>
-<div class="row">
-<div class="form-group col-md-6">
-                <label for="landing_page">Zipcode</label>
-                <input type="text" class="form-control" id="zip"  placeholder="5 digit zipcode">
-            </div>
 
-
-      
- </div>
 
 
 
@@ -77,7 +69,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <script src="https://js.formifyweb.com/jk&co_rtb_15oct.js"></script>
+  <script src="https://js.formifyweb.com/jk&co_rtb_15oct.js?ver=1"></script>
 
   <!-- Custom script for form submission and notification -->
    <script>
@@ -87,3 +79,4 @@
     </script>
 </body>
 </html>
+
